--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/tailwindcss": "^5.3.5",
     "@tailwindcss/typography": "^0.5.7",
     "@vueuse/nuxt": "^9.3.1",
+    "dayjs": "^1.11.6",
     "nuxt": "3.0.0-rc.11",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
