--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
     "@iconify-json/ri": "^1.1.3",
     "@iconify/json": "^2.1.123",
     "@nuxt/content": "^2.2.0",
+    "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "@nuxtjs/tailwindcss": "^6.1.1",
     "@tailwindcss/typography": "^0.5.7",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "@vueuse/nuxt": "^9.3.1",
     "dayjs": "^1.11.6",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-vue": "^9.6.0",
     "nuxt": "3.0.0-rc.12",
+    "prettier": "^2.7.1",
     "tailwindcss-iconify": "^0.0.3",
+    "typescript": "^4.8.4",
     "vite-svg-loader": "^3.6.0"
   }
 }
