--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-plugin-vue": "^9.6.0",
     "nuxt": "3.0.0-rc.12",
     "prettier": "^2.7.1",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "tailwindcss-iconify": "^0.0.3",
     "typescript": "^4.8.4",
     "vite-svg-loader": "^3.6.0"
